@startuml
title <size: 30> US26 Class Diagram
skinparam linetype ortho

interface Sensor {
    + getName() : String
    + getUnit() : String
    + getLog() : ArrayList<String>
}

interface Value<T> {
    + getValue() : T
    + getValueAsString() : String
}

class SimHardware {
+ getvalue(initialDate : String, finalDate : String) : boolean
}

interface ExternalServices{}

class EnergyConsumptionSensor{
    - sensorName : String
    - unit : String
    -Type : String
    - simHardware : SimHardware
    - log : ArrayList<Value<Integer>>

    +EnergyConsumptionSensor(sensorName : String,externalServices : ExternalServices)
    +getReading() : Value<Integer>
    +getName() : String
    +getUnit() : String
    +getLog() : ArrayList<String>
    +getType() : String
    -validateSensorName(sensorName : String) : boolean
    -getInitialDateTime(initialDate : String) : LocalDateTime
    -getFinalDateTime(finalDate : String) : LocalDateTime
    -validateDate(initialDate : LocalDateTime, finalDateTime : LocalDateTime) : boolean
    -addLog(value : Value<Integer>) : void

}

class EnergyConsumptionValue {
    - primitiveValue : Integer

    + EnergyConsumptionValue(reading : String)
    - validateReading(reading : String) : boolean
    + getValue() : Integer
    + getValueAsString() : String
}

Value <|.. EnergyConsumptionValue
Sensor <|.. EnergyConsumptionSensor
ExternalServices <|.. SimHardware
EnergyConsumptionSensor <.left. SimHardware
EnergyConsumptionSensor .right.> EnergyConsumptionValue


@enduml